# imnodeflow-example

./: AppImGuiCRTP.hpp  CMakeLists.txt  LICENSE  ReadMe.md  main.cpp
Nodes/: NodePlot2Values.cpp  NodePlot2Values.hpp  NodeSetFloat.cpp  NodeSetFloat.hpp
